--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>TweetFrom: Visualize from where you tweet!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -48,8 +48,8 @@
           <a class="brand" href="index.html">TweetFrom</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="#about">Code</a></li>
-              <li><a href="#contact">Author</a></li>
+              <li><a href="https://github.com/palamago/tweetFrom">Code</a></li>
+              <li><a href="https://twitter.com/palamago">Author</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="container well" style="text-align: center;">
-      <p>Created by <a href="https://twitter.com/palamago">@palamago</a> - Code on <a href="">GitHub</a></p>
+      <p>Created by <a href="https://twitter.com/palamago">@palamago</a> - Code on <a href="https://github.com/palamago/tweetFrom">GitHub</a></p>
       <p>Using: <a href="http://jquery.com/">jQuery</a> - Twitter <a href="https://dev.twitter.com/docs">API</a> & <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> - <a href="http://thejit.org/">JavaScript InfoVis Toolkit</a> - "Superhero" theme from <a href="http://bootswatch.com/">Bootswatch</a></p>
     
 
