--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <a class="brand" href="index.html">TweetFrom</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="https://github.com/palamago/tweetFrom">Code</a></li>
-              <li><a href="https://twitter.com/palamago">Author</a></li>
+              <li><a target="_blank" href="https://github.com/palamago/tweetFrom">Code</a></li>
+              <li><a target="_blank" href="https://twitter.com/palamago">Author</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -83,7 +83,7 @@
         <h1 class="username"></h1>
         <br/>
         <img width="200" src="" />
-        <div id="tweetButtonContainer" style="padding:10px">
+        <div id="tweetButtonContainer">
 
         </div>          
       </div>
@@ -100,8 +100,8 @@
     </div>
 
     <div class="container well" style="text-align: center;">
-      <p>Created by <a href="https://twitter.com/palamago">@palamago</a> - Code on <a href="https://github.com/palamago/tweetFrom">GitHub</a></p>
-      <p>Using: <a href="http://jquery.com/">jQuery</a> - Twitter <a href="https://dev.twitter.com/docs">API</a> & <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> - <a href="http://thejit.org/">JavaScript InfoVis Toolkit</a> - "Superhero" theme from <a href="http://bootswatch.com/">Bootswatch</a></p>
+      <p>Created by <a target="_blank" href="https://twitter.com/palamago">@palamago</a> just for fun and learn - Code on <a target="_blank" href="https://github.com/palamago/tweetFrom">GitHub</a></p>
+      <p>Using: <a target="_blank" href="http://jquery.com/">jQuery</a> - Twitter <a target="_blank" href="https://dev.twitter.com/docs">API</a> & <a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a> - <a target="_blank" href="http://thejit.org/">JavaScript InfoVis Toolkit</a> - "Superhero" theme from <a target="_blank" href="http://bootswatch.com/">Bootswatch</a></p>
     
 
     </div>
