--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+  
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-18158765-1']);
+      _gaq.push(['_setDomainName', 'palamago.com.ar']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
   </head>
 
   <body>
@@ -101,7 +117,7 @@
 
     <div class="container well" style="text-align: center;">
       <p>Created by <a target="_blank" href="https://twitter.com/palamago">@palamago</a> just for fun and learn - Code on <a target="_blank" href="https://github.com/palamago/tweetFrom">GitHub</a></p>
-      <p>Using: <a target="_blank" href="http://jquery.com/">jQuery</a> - Twitter <a target="_blank" href="https://dev.twitter.com/docs">API</a> & <a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a> - <a target="_blank" href="http://thejit.org/">JavaScript InfoVis Toolkit</a> - "Superhero" theme from <a target="_blank" href="http://bootswatch.com/">Bootswatch</a></p>
+      <p>Using: <a target="_blank" href="http://jquery.com/">jQuery</a> - Twitter <a target="_blank" href="https://dev.twitter.com/docs">API</a> & <a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a> - <a target="_blank" href="http://thejit.org/">JavaScript InfoVis Toolkit</a> - "Superhero" theme from <a target="_blank" href="http://bootswatch.com/">Bootswatch</a>    </p>
     
 
     </div>
